--- a/.env.development
+++ b/.env.development
@@ -3,3 +3,4 @@ POSTGRES_PASSWORD=loco
 POSTGRES_DB=loco
 POSTGRES_HOSTNAME=localhost
 POSTGRES_PORT=5432
+DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOSTNAME}:${POSTGRES_PORT}/${POSTGRES_DB}
